# GIFT-Multimodal-EAE-ECR

./: .gitignore  README.md  environment.windows.yml  environment.yml  package-lock.json  package.json  run_engine.py  test_expert.py
libs/Track/: __init__.py  mapper.py
libs/Track/processing/: utils.py
libs/Track/utils/: association.py  pose_association.py
libs/giftpose/: __init__.py  inferencer.py
libs/giftpose/codecs/: __init__.py  simcc.py
libs/giftpose/export/: __init__.py  onnx_export.py  torchscript_export.py  trt_build.py
libs/giftpose/meta/: __init__.py  halpe26.py
libs/giftpose/models/: __init__.py  csp_blocks.py  cspnext.py  cspnext_pafpn.py  detector.py  pose_estimator.py  rtmcc_block.py  rtmcc_head.py  rtmdet_head.py
src/: analysis.py  helper_functions.py  processing_engine.py
src/metrics/: __init__.py  _shared.py  capture_pod.py  capture_pod_time.py  context.py  entrance_hesitation.py  entrance_vectors.py  metric.py  move_along_wall.py  pod.py  room_coverage.py  room_coverage_time.py  teammate_coverage.py  threat_clearance.py  threat_coverage.py  total_entry_time.py  utils.py
src/utils/: audio.py  certs.py  config.py  config_builder_app.py  denoise.py  drill_window.py  mapper_app.py  node_runtime.py  paths.py  run_info.py  run_metadata.py  scaled_point_mapper_app.py  torch_memory.py  transcription.py
src/utils/mapper_viewer/frontend/src-tauri/: Cargo.toml  tauri.conf.json
src/utils/mapper_viewer/frontend/src-tauri/capabilities/: default.json
src/utils/mapper_viewer/frontend/src-tauri/src/: lib.rs  main.rs
(+121 files in other folders)
