[package]
name = "mapper-viewer"
version = "0.1.0"
description = "Cross-platform mapper viewer for authoring per-room artifacts (GIFT Multimodal pipeline)"
edition = "2021"
rust-version = "1.77"

[lib]
name = "mapper_viewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
